Added manual classpath