@@ -41,7 +41,7 @@ public class WorkerThread extends Thread {
             sshClient.uploadFile(new File("./dist/" + JARNAME), "~/"+JARNAME);
             sshClient.uploadFile(jars, "~/jars.tar");
             sshClient.executeCommand("tar -xvf jars.tar", System.out);
-            sshClient.executeCommand("java -cp "+JARNAME + " system.Worker" + " "+ masterDomainName, System.out);
+            sshClient.executeCommand("java -cp "+JARNAME + "-Djava.ext.dirs=dist/lib/ " +"system.Worker" + " "+ masterDomainName, System.out);
         } catch (IOException ex) {
             System.out.println("Unable to upload file.");
             System.exit(1);
